# sweet

./: .gitignore  .swtrc  CONTRIBUTING.md  Cargo.toml  README.md  build-all.sh  install-hooks  schema.json
.github/workflows/: ci.yml  release.yml
benches/: analysis_bench.rs
editors/vscode/: README.md  package.json
editors/vscode/scripts/: download-binaries.ts
editors/vscode/src/: extension.ts
hooks/: pre-push
src/: errors.rs  lib.rs  main.rs  update.rs
src/analyzer/: complexity.rs  engine.rs  functions.rs  ignore.rs  mod.rs  repetition.rs  scanner.rs  syntax.rs  uncomment.rs  volume.rs
src/config/: mod.rs  thresholds.rs  ui.rs
src/languages/: mod.rs
src/languages/definitions/: csharp.rs  gdscript.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  rust.rs  typescript.rs
src/report/: json.rs  mod.rs  terminal.rs
tests/: cli_tests.rs
wix/: License.rtf  main.wxs
