[package]
name = "swt"
version = "2.0.1"
edition = "2024"
authors = ["SirCesarium <contact.cesarmarcano@gmail.com>"]
description = "🍬 Sweet: A blazing-fast code health and architecture analyzer."
license = "MIT"
readme = "README.md"
repository = "https://github.com/SirCesarium/sweet"
homepage = "https://github.com/SirCesarium/sweet"
keywords = ["cli", "static-analysis", "code-quality", "metrics", "architecture"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.3"
dashmap = "6.1.0"
human_bytes = "0.4.3"
ignore = "0.4.25"
indicatif = { version = "0.18.4", features = ["rayon"] }
memmap2 = "0.9.10"
miette = { version = "7.6.0", features = ["fancy"] }
once_cell = "1.20.3"
rayon = "1.11.0"
regex = "1.12.3"
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[features]
schema = ["schemars"]
schemars = ["dep:schemars"]
