[package]
name = "swt"
version = "4.0.1"
edition = "2024"
authors = ["SirCesarium <contact.cesarmarcano@gmail.com>"]
description = "🍬 Sweet: A blazing-fast code health and architecture analyzer."
license = "MIT"
readme = "README.md"
repository = "https://github.com/SirCesarium/sweet"
homepage = "https://github.com/SirCesarium/sweet"
keywords = ["cli", "static-analysis", "code-quality", "metrics", "architecture"]
categories = ["development-tools", "command-line-utilities"]
default-run = "swt"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.3"
dashmap = "6.1.0"
human_bytes = "0.4.3"
ignore = "0.4.25"
indicatif = { version = "0.18.4", features = ["rayon"] }
memmap2 = "0.9.10"
miette = { version = "7.6.0", features = ["fancy"] }
once_cell = "1.21.4"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream", "blocking"] }
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"], optional = true }
tower-lsp = { version = "0.20.0", optional = true }
self_update = { version = "0.42.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }


[package.metadata.deb]
maintainer = "SirCesarium <contact.cesarmarcano@gmail.com>"
copyright = "2026, SirCesarium"
license-file = ["LICENSE"]
extended-description = "A blazing-fast code health and architecture analyzer designed to keep project architectures lean and sustainable."
section = "devel"
priority = "optional"
assets = [
    ["target/release/swt", "usr/bin/swt", "755"],
    ["README.md", "usr/share/doc/swt/README.md", "644"],
]

[package.metadata.generate-rpm]
name = "swt"
version = "3.3.0"
release = "1"
arch = "x86_64"
summary = "A blazing-fast code health and architecture analyzer."
description = "Sweet is a high-performance code health analyzer designed to keep project architectures lean and sustainable."
license = "MIT"
assets = [
    { source = "target/release/swt", dest = "/usr/bin/swt", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/swt/README.md", mode = "644" },
]

[features]
default = []
schema = ["schemars"]
schemars = ["dep:schemars"]
lsp = ["dep:tokio", "dep:tower-lsp"]

[[bin]]
name = "sweet-analyzer-lsp"
path = "src/bin/lsp.rs"
required-features = ["lsp"]

[[bin]]
name = "swt"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
